--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -12,13 +12,19 @@ env:
   ECS_SERVICE: document-portal-service
   ECS_CLUSTER: document-portal-cluster1
   ECS_TASK_DEFINITION: .github/workflows/task-definition.json
-  CONTAINER_NAME: document-portal-container
+  CONTAINER_NAME: document-portal-container1
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
+  check-status:
+    runs-on: ubuntu-latest
+    if: ${{github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main'}}
+    steps:
+      - name: CI passed on main branch
+        run: echo "CI passed on main branch, proceeding to build and deploy."
   # -------------------------------
   # 1. Build & Push Docker Image
   # -------------------------------
