changes in task_definition10

--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -80,11 +80,12 @@ jobs:
 
       - name: Render Task Definition
         id: render-task
-        uses: aws-actions/amazon-ecs-render-task-definition@v9
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ needs.build-and-push.outputs.image }}
+          container-name: document-portal-container1
+          image: 086325459126.dkr.ecr.ap-southeast-2.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+
 
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v9
