changes in task_definition13

--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -82,9 +82,9 @@ jobs:
         id: render-task
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ needs.build-and-push.outputs.image }}
+          task-definition: task-definition.json
+          container-name: document-portal-container1
+          image: 086325459126.dkr.ecr.ap-southeast-2.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
 
 
       - name: Deploy to ECS
