--- a/infrastructure/document-portal-cf.yaml
+++ b/infrastructure/document-portal-cf.yaml
@@ -107,7 +107,7 @@ Resources:
   ECSExecutionRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: ecsTaskExecutionRole
+      RoleName: AWSServiceRoleForECS
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
